--- a/system/latex/textbook-template.tex
+++ b/system/latex/textbook-template.tex
@@ -97,6 +97,7 @@ $else$
 % for sideways table
 \usepackage{rotating}
 \usepackage{pdfpages}
+\usepackage{tikz}
 $endif$
 $if(linestretch)$
 \usepackage{setspace}
