--- a/system/misc/help-template.adoc
+++ b/system/misc/help-template.adoc
@@ -21,25 +21,24 @@ done
 
 [source]
 ----
-A1 & "-" & IF(EXACT(B1,"y"), "PART-", "")
-&
-REGEX(
-  LEFT(
-      REGEX(
+= A2 & "-" & IF(EXACT(B2,"y"), "PART-", "")
+& REGEX(
+    LEFT(
         REGEX(
-          LOWER(C1);
-          "[.\u0027‘’“”""""]";
-          "";
-          "g"
-        );
-        "\s+";
-        "-";
-        "g"
-      ),
-    30
-  ),
-  "-$",
-  ""
+            REGEX(
+                LOWER(C2),
+                "[.\u0027‘’“”""""?:]",
+                "",
+                "g"
+            ),
+            "\s+",
+            "-",
+            "g"
+        ),
+        30
+    ),
+    "-$",
+    ""
 ) & ".md"
 ----
 
