--- a/system/latex/novel-template.tex
+++ b/system/latex/novel-template.tex
@@ -97,6 +97,8 @@ $else$
 % for sideways table
 \usepackage{rotating}
 \usepackage{pdfpages}
+% for full page image
+\usepackage{tikz}
 $endif$
 $if(linestretch)$
 \usepackage{setspace}
