Upgraded pandoc. Changed font to CrimsonPro as CrimsonText doesnt have the latest unicode characters we need. Added book Swaraj by Arvind Kejriwal

--- a/system/latex/article-template.tex
+++ b/system/latex/article-template.tex
@@ -93,7 +93,7 @@ $endif$
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
-\usepackage{crimson}
+\usepackage{CrimsonPro}
 % for sideways table
 \usepackage{rotating}
 \usepackage{pdfpages}
