--- a/system/latex/textbook-template.tex
+++ b/system/latex/textbook-template.tex
@@ -93,7 +93,7 @@ $endif$
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
-\usepackage{crimson}
+\usepackage{CrimsonPro}
 % for sideways table
 \usepackage{rotating}
 \usepackage{pdfpages}
