--- a/system/latex/novel-template.tex
+++ b/system/latex/novel-template.tex
@@ -486,6 +486,8 @@ $if(babel-otherlangs)$
 \babelfont[malayalam]{rm}[Renderer=HarfBuzz]{Noto Serif Malayalam}
 \babelfont[malayalam]{sf}[Renderer=HarfBuzz]{Noto Sans Malayalam}
 
+% Noto does not provide serif variant for Oriya language. For now using Baloo Bhaina 2 font
+\babelfont[oriya]{rm}[Renderer=HarfBuzz]{Baloo Bhaina 2}
 \babelfont[oriya]{sf}[Renderer=HarfBuzz]{Noto Sans Oriya}
 
 \babelfont[tamil]{rm}[Renderer=HarfBuzz]{Noto Serif Tamil}
